--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "angular-universal-material": {
@@ -170,6 +170,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-universal-material"
+    }
+  },
+  "defaultProject": "angular-universal-material",
+  "cli": {
+    "analytics": "28f6d395-1c42-4948-a9fb-66f08c91c582"
+  }
 }
